# Democratizing_Information_Access_in_Automotive_Industry_Through_Retrieval_Augmented_Generation

./: README.md  main.py  pyproject.toml
Adaptation/: requirements.txt
Adaptation/Adaptation Results/mapper_logs/: bs32_lr0.0001_reg0.0_margin0.5_pt0.7.csv  bs32_lr0.0001_reg0.0_margin0.5_pt0.8.csv  bs32_lr0.0001_reg0.0_margin0.5_pt0.9.csv  bs32_lr0.0001_reg0.0_margin0.7_pt0.7.csv  bs32_lr0.0001_reg0.0_margin0.7_pt0.8.csv  bs32_lr0.0001_reg0.0_margin0.7_pt0.9.csv  bs32_lr0.0001_reg0.1_margin0.5_pt0.7.csv  bs32_lr0.0001_reg0.1_margin0.5_pt0.8.csv  bs32_lr0.0001_reg0.1_margin0.5_pt0.9.csv  bs32_lr0.0001_reg0.1_margin0.7_pt0.7.csv  bs32_lr0.0001_reg0.1_margin0.7_pt0.8.csv  bs32_lr0.0001_reg0.1_margin0.7_pt0.9.csv  bs32_lr0.0001_reg0.3_margin0.5_pt0.7.csv  bs32_lr0.0001_reg0.3_margin0.5_pt0.8.csv  bs32_lr0.0001_reg0.3_margin0.5_pt0.9.csv  bs32_lr0.0001_reg0.3_margin0.7_pt0.7.csv  bs32_lr0.0001_reg0.3_margin0.7_pt0.8.csv  bs32_lr0.0001_reg0.3_margin0.7_pt0.9.csv  bs32_lr0.0005_reg0.0_margin0.5_pt0.7.csv  bs32_lr0.0005_reg0.0_margin0.5_pt0.8.csv  bs32_lr0.0005_reg0.0_margin0.7_pt0.7.csv  bs32_lr0.0005_reg0.0_margin0.7_pt0.8.csv  bs32_lr0.0005_reg0.0_margin0.7_pt0.9.csv  bs32_lr0.0005_reg0.1_margin0.5_pt0.7.csv  bs32_lr0.0005_reg0.1_margin0.5_pt0.8.csv  bs32_lr0.0005_reg0.1_margin0.5_pt0.9.csv  bs32_lr0.0005_reg0.1_margin0.7_pt0.7.csv  bs32_lr0.0005_reg0.1_margin0.7_pt0.8.csv  bs32_lr0.0005_reg0.1_margin0.7_pt0.9.csv  bs32_lr0.0005_reg0.3_margin0.5_pt0.7.csv  bs32_lr0.0005_reg0.3_margin0.5_pt0.8.csv  bs32_lr0.0005_reg0.3_margin0.5_pt0.9.csv  bs32_lr0.0005_reg0.3_margin0.7_pt0.7.csv  bs32_lr0.0005_reg0.3_margin0.7_pt0.8.csv  bs32_lr0.0005_reg0.3_margin0.7_pt0.9.csv  bs32_lr0.001_reg0.0_margin0.5_pt0.7.csv  bs32_lr0.001_reg0.0_margin0.5_pt0.8.csv  (+64 more)
Webapp2/: app.py  generator.py  gold_initial.csv  query_dataset_10_255_main.json
Webapp2/static/js/: main.js
Webapp2/templates/: base.html  index.html  results.html
config/: config.yaml
data/raw/: .gitkeep
results/: .gitkeep
src/: __init__.py  config.py
src/adaptation/: __init__.py  trainer.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  generator.py
src/models/: __init__.py  mapper.py  transformer.py
src/retrieval/: __init__.py  search_engine.py
src/utils/: __init__.py  data_utils.py
src/webapp/: __init__.py  app.py
(+7 files in other folders)
